Fixed z-index issues with the filter manu.  Also added some functions to handle the individual popups and modals separately from eachother, so they aren't all opening at once.  I temporarily fixed the issue with the scrolling and changing the styling.  That may be temporary, I may need to work around, that, but for now, it works. Pushing changes to github.

--- a/src/scss/components/productSearch/childComp/filterMenu.scss
+++ b/src/scss/components/productSearch/childComp/filterMenu.scss
@@ -2,7 +2,8 @@
 
 .filterMenu{
     border-bottom: 1px dotted black;
-    padding-bottom: 2rem;
+    padding: 2rem 0;
+    margin-bottom: 3rem;
     top: 2rem;
     background: white;
     .btnStyle{
