--- a/src/scss/components/productSearch/childComp/sideMenu.scss
+++ b/src/scss/components/productSearch/childComp/sideMenu.scss
@@ -1,4 +1,4 @@
 
 .sideMenu{
-    top: 2rem;
+    top: 3rem;
 }
